--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <div id="SidebarBtn"><a href="#about" rel="modal:open">☰</a></div>
   <div id="page">
     <div id="p5_loading" class="loadingClass">
-      
-      <!--loading...span id="title">Radical of the Vertical Heart</span>
+      loading...
+      <!--span id="title">Radical of the Vertical Heart</span>
       &nbsp; by <a id="author" href="https://rednoise.org/daniel" target="_new">Daniel C. Howe</a-->
     </div>
     <div id="about" class="modal">
