--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-  <!--script src="zeroto.js"></script-->
   <script src="sketch.js"></script>
 </head>
 
@@ -26,7 +25,7 @@
   <div id="SidebarBtn"><a href="#about" rel="modal:open">☰</a></div>
   <div id="page">
     <div id="p5_loading" class="loadingClass">
-      loading...
+      Loading...
       <!--span id="title">Radical of the Vertical Heart</span>
       &nbsp; by <a id="author" href="https://rednoise.org/daniel" target="_new">Daniel C. Howe</a-->
     </div>
