--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
   <div id="mySidenav" class="sidenav"></div>
   <div id="SidebarBtn"><a href="#about" rel="modal:open">☰</a></div>
   <div id="page">
-    <div id="p5_loading" class="loadingClass">
-      Loading...
       <!--span id="title">Radical of the Vertical Heart</span>
       &nbsp; by <a id="author" href="https://rednoise.org/daniel" target="_new">Daniel C. Howe</a-->
-    </div>
+
     <div id="about" class="modal">
+      <div id="p5_loading" class="loadingClass">
+        <!-- Loading... -->
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif" alt="HTML5 Icon" width="100" height="70">
+      </div>
       <div id="aboutTitle">Radical of the Vertical Heart</div>
       <div id="aboutDescription">
         <p>
