cleanup old scripts, avoid repeated definitions

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         A reading machine that searches the possibility space of (simplified and traditional)
         Chinese, one word at a time. While alphabetic machines, like Automatype, move according to the mutation of letters, whether by deletion, addition or substitution, logographic machines, like the one shown on the project page analyse Chinese according to a unique algorithm for distance based on analysis of the strokes, radicals, and subcomponents of characters. -->
       </div>
-      <div id="aboutAuthor"><a href="https://rednoise.org/daniel" target="_blank">Daniel C Howe</a><br />
+      <div id="aboutAuthor"><a href="https://rednoise.org/daniel" target="_new">Daniel C Howe</a><br />
         <!--br><a href="https://www.twitter.com/@danielchowe" target="_blank">@danielchowe</a><br-->
         June 1, 2020</div>
 
       <div id="aboutClose"><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img
-            alt="Creative Commons License" style="border-width:0"
+            alt="Creative Commons License" style="border-width:0" target="_new"
             src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a></div>
     </div>
   </div>
