--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <!--span id="title">Radical of the Vertical Heart</span>
       &nbsp; by <a id="author" href="https://rednoise.org/daniel" target="_new">Daniel C. Howe</a-->
 
-    <div id="about" class="modal">
+    <div id="about" class="modal beforeLoaded">
       <div id="p5_loading" class="loadingClass">
         <!-- Loading... -->
         <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif" alt="HTML5 Icon" width="100" height="70">
