--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
       <div id="aboutTitle">Radical of the Vertical Heart</div>
       <div id="aboutDescription">
         <p>
-          The newest in the <em>Atomic Language Machines</em> series, this reading machine searches the combination
-          space of valid Chinese words by repeatedly making the minimal allowable change to the sub-character components
-          of&nbsp;characters.</p>
+          The newest in the <em>Atomic Language Machines</em> series, this reading machine traverses the Chinese lexicon
+          by repeatedly making the minimal allowable change to the sub-character components of&nbsp;characters.
+        </p>
         <p>Rather than evaluating letter mutations, as in alphabetic machines, this logographic reader uses a <em> novel
             algorithm</em> for distance based on analysis of the strokes, radicals, and subcomponents of characters.
         </p>
         <p>When the machine lands on <em>sensitive</em> words, such as those disallowed by China's <em>Great
-            Firewall</em>, a break occurs and the machine jumps from traditional to simplified or vice versa. See the
+            Firewall</em>, a warning is issued and the machine jumps from traditional to simplified or vice versa. See the
           <a href="https://rednoise.org/daniel/detail.html#radicaloftheverticalheart" target="_blank">project
             page</a> for&nbsp;more&nbsp;details.</p>
         <!--p>
