add start button

--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
       &nbsp; by <a id="author" href="https://rednoise.org/daniel" target="_new">Daniel C. Howe</a-->
 
     <div id="about" class="modal beforeLoaded">
-      <div id="p5_loading" class="loadingClass">
-        <!-- Loading... -->
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif" alt="HTML5 Icon" width="100" height="70">
-      </div>
       <div id="aboutTitle">Radical of the Vertical Heart</div>
       <div id="aboutDescription">
         <p>
@@ -62,6 +58,13 @@
       <div id="aboutAuthor"><a href="https://rednoise.org/daniel" target="_new">Daniel C Howe</a><br />
         <!--br><a href="https://www.twitter.com/@danielchowe" target="_blank">@danielchowe</a><br-->
         June 1, 2020</div>
+        <div id="p5_loading" class="loadingClass">
+          <!-- Loading... -->
+          <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif" alt="HTML5 Icon" width="100" height="70">
+        </div>
+        <div id="startButton">
+          Start
+        </div>
 
       <div id="aboutClose"><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img
             alt="Creative Commons License" style="border-width:0" target="_new"
