--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
   <div id="mySidenav" class="sidenav"></div>
   <div id="SidebarBtn"><a href="#about" rel="modal:open">☰</a></div>
   <div id="page">
-      <!--span id="title">Radical of the Vertical Heart</span>
+    <!--span id="title">Radical of the Vertical Heart</span>
       &nbsp; by <a id="author" href="https://rednoise.org/daniel" target="_new">Daniel C. Howe</a-->
     <div id="about" class="modal beforeLoaded">
       <div id="p5_loading" class="loadingClass">
         <!-- Loading... -->
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif" alt="HTML5 Icon" width="100" height="70">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif" alt="HTML5 Icon" width="100"
+          height="70">
       </div>
       <div id="startButton">
         Click to start
@@ -40,26 +41,14 @@
           The newest in the <em>Atomic Language Machines</em> series, this reading machine traverses the Chinese lexicon
           by repeatedly making the minimal allowable change to the sub-character components of&nbsp;characters.
         </p>
-        <p>Rather than evaluating letter mutations, as in alphabetic machines, this logographic reader uses a <em> novel
-            algorithm</em> for distance based on analysis of the strokes, radicals, and subcomponents of characters.
+        <p>Rather than evaluating letter mutations, as in alphabetic machines, this logographic reader uses a novel
+          algorithm for distance based on analysis of the strokes, radicals, and subcomponents of characters.
         </p>
-        <p>When the machine lands on <em>sensitive</em> words, such as those disallowed by China's <em>Great
-            Firewall</em>, a warning is issued and the machine jumps from traditional to simplified or vice versa. See the
+        <p>When the machine lands on sensitive words, such as those disallowed by China's Great
+          Firewall, a red warning flash is issued and the machine jumps from traditional to simplified or vice versa.
+          See the
           <a href="https://rednoise.org/daniel/detail.html#radicaloftheverticalheart" target="_blank">project
-            page</a> for&nbsp;more&nbsp;details.</p>
-        <!--p>
-          The newest in the <a href="https://rednoise.org/daniel/detail.html#automatype" target="_blank">Atomic Language
-            Machines</a> series, this reading machine searches the combination space of Chinese words by repeatedly
-          making the minimal allowable change to the sub-character components of characters.</p>
-        <p>Rather than evaluating letter mutations, as in alphabetic machines, this logographic reader uses a <a
-            href="https://rednoise.org/daniel/detail.html#radicaloftheverticalheart" target="_blank"> novel
-            algorithm</a> for distance based on analysis of the strokes, radicals, and subcomponents of characters. </p>
-        <p>When the machine lands on <a href="https://rednoise.org/daniel/detail.html#radicaloftheverticalheart"
-            target="_blank">'sensitive'</a> words, such as those disallowed by China's <em>Great Firewall</em>, a
-          'break' occurs and the machine jumps from traditional to simplified, or vice versa. See the <a>project
-            page</a> for more info</p>
-        A reading machine that searches the possibility space of (simplified and traditional)
-        Chinese, one word at a time. While alphabetic machines, like Automatype, move according to the mutation of letters, whether by deletion, addition or substitution, logographic machines, like the one shown on the project page analyse Chinese according to a unique algorithm for distance based on analysis of the strokes, radicals, and subcomponents of characters. -->
+            page</a> for&nbsp;more&nbsp;details.<br/></p>
       </div>
       <div id="aboutAuthor"><a href="https://rednoise.org/daniel" target="_new">Daniel C Howe</a><br />
         <!--br><a href="https://www.twitter.com/@danielchowe" target="_blank">@danielchowe</a><br-->
