--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="lib/p5.min.js"></script>
-  <script src="lib/p5.dom.min.js"></script>
+  <!--script src="lib/p5.dom.min.js"></script-->
   <script src="node_modules/tone/build/Tone.min.js"></script>
   <script src="./audioshim.js"></script>
   <script src="node_modules/fast-levenshtein/levenshtein.js"></script>
