add radical to index title

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div id="startButton">
         Click to start
       </div>
-      <div id="aboutTitle">Radical of the Vertical Heart</div>
+      <div id="aboutTitle">Radical of the Vertical Heart 忄</div>
       <div id="aboutDescription">
         <p>
           The newest in the <em>Atomic Language Machines</em> series, this reading machine traverses the Chinese lexicon
