--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
           by repeatedly making the minimal allowable change to the sub-character components of&nbsp;characters.
         </p>
         <p>Rather than evaluating letter mutations, as in alphabetic machines, this logographic reader uses a novel
-          algorithm for distance based on analysis of the strokes, radicals, and subcomponents of characters.
+          algorithm for distance, based on analysis of the strokes, radicals and subcomponents of characters.
         </p>
         <p>When the machine lands on sensitive words, such as those disallowed by China's Great
-          Firewall, a red warning flash is issued and the machine jumps from traditional to simplified or vice versa.
+          Firewall, a red warning flash is issued and it jumps from traditional to simplified or vice versa.
           See the
           <a href="https://rednoise.org/daniel/detail.html#radicaloftheverticalheart" target="_blank">project
-            page</a> for&nbsp;more&nbsp;details.<br/></p>
+            page</a> for further&nbsp;documentation.<br/></p>
       </div>
       <div id="aboutAuthor"><a href="https://rednoise.org/daniel" target="_new">Daniel C Howe</a><br />
         <!--br><a href="https://www.twitter.com/@danielchowe" target="_blank">@danielchowe</a><br-->
