mid-update trigger-defs

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
             src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a></div>
     </div>
   </div>
+  HTML: <a id="downloadAnchorElem" style="display:none"></a>
+
 </body>
 
 </html>
