--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width">
   <title>Radical of the Vertical Heart</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+  <link rel="stylesheet" href="lib/jquery.modal.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="lib/p5.min.js"></script>
-  <!--script src="lib/p5.dom.min.js"></script-->
   <script src="node_modules/tone/build/Tone.min.js"></script>
-  <script src="./audioshim.js"></script>
+  <script src="lib/audioshim.js"></script>
   <script src="node_modules/fast-levenshtein/levenshtein.js"></script>
   <script src="cutils.js"></script>
   <script src="autochar.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+  <script src="lib/jquery-3.5.1.min.js"></script>
+  <script src="lib/jquery.modal.min.js"></script>
   <script src="sketch.js"></script>
 </head>
 
@@ -24,13 +22,9 @@
   <div id="mySidenav" class="sidenav"></div>
   <div id="SidebarBtn"><a href="#about" rel="modal:open">☰</a></div>
   <div id="page">
-    <!--span id="title">Radical of the Vertical Heart</span>
-      &nbsp; by <a id="author" href="https://rednoise.org/daniel" target="_new">Daniel C. Howe</a-->
     <div id="about" class="modal beforeLoaded">
       <div id="p5_loading" class="loadingClass">
-        <!-- Loading... -->
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif" alt="HTML5 Icon" width="100"
-          height="70">
+        <img src="res/loading_icon.gif" alt="loading icon" width="100" height="70">
       </div>
       <div id="startButton">
         Click to start
@@ -48,7 +42,7 @@
           Firewall, a red warning flash is issued and it jumps from traditional to simplified or vice versa.
           See the
           <a href="https://rednoise.org/daniel/detail.html#radicaloftheverticalheart" target="_blank">project
-            page</a> for further&nbsp;documentation.<br/></p>
+            page</a> for further&nbsp;documentation.<br /></p>
       </div>
       <div id="aboutAuthor"><a href="https://rednoise.org/daniel" target="_new">Daniel C Howe</a><br />
         <!--br><a href="https://www.twitter.com/@danielchowe" target="_blank">@danielchowe</a><br-->
@@ -61,4 +55,5 @@
   </div>
 
 </body>
+
 </html>
